Implemented error checking

--- a/package.yaml
+++ b/package.yaml
@@ -23,20 +23,22 @@ dependencies:
 - base >= 4.7 && < 5
 
 ghc-options:
-- -Wall
-- -Wcompat
-- -Widentities
-- -Wincomplete-record-updates
-- -Wincomplete-uni-patterns
-- -Wmissing-export-lists
-- -Wmissing-home-modules
-- -Wpartial-fields
-- -Wredundant-constraints
+#- -Wall
+#- -Wcompat
+#- -Widentities
+#- -Wincomplete-record-updates
+#- -Wincomplete-uni-patterns
+#- -Wmissing-export-lists
+#- -Wmissing-home-modules
+#- -Wpartial-fields
+#- -Wredundant-constraints
+- -XFlexibleContexts
 
 library:
   source-dirs: src
   dependencies:
     - parsec
+    - mtl
 
 executables:
   scheme-exe:
@@ -48,6 +50,7 @@ executables:
     - -with-rtsopts=-N
     dependencies:
     - parsec
+    - mtl
     - scheme
 
 tests:
