--- a/scheme.cabal
+++ b/scheme.cabal
@@ -25,14 +25,16 @@ source-repository head
 
 library
   exposed-modules:
+      ErrorChecking
       Parser
   other-modules:
       Paths_scheme
   hs-source-dirs:
       src
-  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
+  ghc-options: -XFlexibleContexts
   build-depends:
       base >=4.7 && <5
+    , mtl
     , parsec
   default-language: Haskell2010
 
@@ -42,9 +44,10 @@ executable scheme-exe
       Paths_scheme
   hs-source-dirs:
       app
-  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
+  ghc-options: -XFlexibleContexts -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
+    , mtl
     , parsec
     , scheme
   default-language: Haskell2010
@@ -56,7 +59,7 @@ test-suite scheme-test
       Paths_scheme
   hs-source-dirs:
       test
-  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
+  ghc-options: -XFlexibleContexts -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
     , scheme
