--- a/scheme.cabal
+++ b/scheme.cabal
@@ -32,7 +32,7 @@ library
       Paths_scheme
   hs-source-dirs:
       src
-  ghc-options: -XFlexibleContexts
+  ghc-options: -XFlexibleContexts -XExistentialQuantification
   build-depends:
       base >=4.7 && <5
     , mtl
@@ -45,7 +45,7 @@ executable scheme-exe
       Paths_scheme
   hs-source-dirs:
       app
-  ghc-options: -XFlexibleContexts -threaded -rtsopts -with-rtsopts=-N
+  ghc-options: -XFlexibleContexts -XExistentialQuantification -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
     , mtl
@@ -60,7 +60,7 @@ test-suite scheme-test
       Paths_scheme
   hs-source-dirs:
       test
-  ghc-options: -XFlexibleContexts -threaded -rtsopts -with-rtsopts=-N
+  ghc-options: -XFlexibleContexts -XExistentialQuantification -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
     , scheme
